# flipCoin

./: CMakeLists.txt  QT.xmind  README.md
code/: chooselevelscene.cpp  chooselevelscene.h  coinmainscene.cpp  coinmainscene.h  coinmainscene.ui  main.cpp  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h
code/resources/: my.qrc
